# mcp-ical

./: CLAUDE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: install.md
src/mcp_ical/: ical.py  models.py  server.py
